2003-12-30  Michel Guitel  <michel.guitel@free.fr>
	* doc/gramps-manual/fr/custom.xml: Update translation.
	* doc/gramps-manual/fr/usage.xml: Update translation.

2003-12-30  Alex Roitman  <shura@alex.neuro.umn.edu>
	* doc/gramps-manual/ru/faq.xml: Update translation.
	* doc/gramps-manual/ru/keybind.xml: Update translation.
	* doc/gramps-manual/ru/filtref.xml: Update translation.

2003-12-29  Don Allingham  <dallingham@users.sourceforge.net>
	* src/WriteXML.py (XmlWriter.write_note): Don't use format=0,
	since it is the default.
	* src/RelLib.py: add sorting by source title, remove dependency on string
	module
	* src/PlaceView.py: do an initial sort, don't rely on "click" function
	* src/SourceView.py: do an initial sort, don't rely on "click" function
	* src/Date.py: catch day changes if the date has both a start and stop part

2003-12-27  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/WebPage.py: proper handling of links in the MiniTree
	* src/plugins/DescendReport.py (_make_default_style): fix indentation levels
	* src/plugins/FamilyGroup.py (FamilyGroup.dump_child): handle missing spouse

2003-12-26  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/MediaView.py (__init__): Translate column header.
	* doc/gramps-manual/ru/cmdline.xml: Update translation. 
	* doc/gramps-manual/ru/faq.xml: Update translation.
	* doc/gramps-manual/ru/mainwin.xml: Update translation.

2003-12-26  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/Check.py (CheckIntegrity.check_parent_relationships): 
	More complete checks handling unknown genders

2003-12-24  Don Allingham  <dallingham@users.sourceforge.net>
	* src/PeopleView.py: Check for null iters before removing from 
	the tree store.
	* src/plugins/Check.py: Fixed handling of Unknown genders in
	family checks

2003-12-18  Don Allingham  <dallingham@users.sourceforge.net>
	* gramps.spec: added gnome-python2-gnomevfs as a dependency